fix text overflow

--- a/assets/index.less
+++ b/assets/index.less
@@ -170,6 +170,10 @@
       padding: 8px 0px;
       margin-left: 15px;
       color: #333;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin-right: 30px;
+      overflow: hidden;
   }
   &-content &-item li:last-child a {
       border-bottom: none;
